periodic table elements

--- a/d00/ex01/mendeleiev.html
+++ b/d00/ex01/mendeleiev.html
@@ -16,9 +16,128 @@
                 <!--tr to def table row-->
                 <tr>
                     <!--def data-->
-                    <td>
-                        hey
-                    </td>
+                    <td id="nonmetal"> H </td>
+                    <td id="space"> </td>
+                    <td id="space"> </td>
+                    <td id="space"> </td>
+                    <td id="space"> </td>
+                    <td id="space"> </td>
+                    <td id="space"> </td>
+                    <td id="space"> </td>
+                    <td id="space"> </td>
+                    <td id="space"> </td>
+                    <td id="space"> </td>
+                    <td id="space"> </td>
+                    <td id="space"> </td>
+                    <td id="space"> </td>
+                    <td id="space"> </td>
+                    <td id="space"> </td>
+                    <td id="space"> </td>
+                    <td id="noble gases"> He </td>
+                </tr>
+                <tr>
+                    <td id="alkalai metals">Li</td>
+                    <td id="alkalai earth metals">Be</td>
+                    <td id="space"></td>
+                    <td id="space"></td>
+                    <td id="spacce"></td>
+                    <td id="space"></td>
+                    <td id="space"></td>
+                    <td id="space"></td>
+                    <td id="space"></td>
+                    <td id="space"></td>
+                    <td id="space"></td>
+                    <td id="space"></td>
+                    <td id="metalloids">B</td>
+                    <td id="nonmetal">C</td>
+                    <td id="nonmetal">N</td>
+                    <td id="nonmetal">O</td>
+                    <td id="halogens">F</td>
+                    <td id="noble gases">Ne</td>
+                </tr>
+                <tr>
+                    <td id="alkalai metals">Na</td>
+                    <td id="alkalai earth metals">Mg</td>
+                    <td id="space"></td>
+                    <td id="space"></td>
+                    <td id="space"></td>
+                    <td id="space"></td>
+                    <td id="space"></td>
+                    <td id="space"></td>
+                    <td id="space"></td>
+                    <td id="space"></td>
+                    <td id="space"></td>
+                    <td id="space"></td>
+                    <td id="post transition">Al</td>
+                    <td id="metalloids">Si</td>
+                    <td id="nonmetal">P</td>
+                    <td id="nonmetal">S</td>
+                    <td id="halogens">Cl</td>
+                    <td id="noble gases">Ar</td>
+                </tr>
+                <tr>
+                    <td id="alkalai metals">K</td>
+                    <td id="alkalai earth metals">Ca</td>
+                    <td id="transition metals">Sc</td>
+                    <td id="transition metals">Ti</td>
+                    <td id="transition metals">V</td>
+                    <td id="transition metals">Cr</td>
+                    <td id="transition metals">Mn</td>
+                    <td id="transition metals">Fe</td>
+                    <td id="transition metals">Co</td>
+                    <td id="transition metals">Ni</td>
+                    <td id="transition metals">Cu</td>
+                    <td id="transition metals">Zn</td>
+                    <td id="post transition">Ga</td>
+                    <td id="metalloids">Ge</td>
+                    <td id="metalloids">As</td>
+                    <td id="nonmetal">Se</td>
+                    <td id="halogens">Br</td>
+                    <td id="noble gases">Kr</td>
+                </tr>
+                <tr>
+                    <td id="alkalai metals">Rb</td>
+                    <td id="alkalai earth metals">Sr</td>
+                    <td id="transition metals">Y</td>
+                    <td id="transition metals">Zr</td>
+                    <td id="transition metals">Nb</td>
+                    <td id="transition metals">Mo</td>
+                    <td id="transition metals">Tc</td>
+                    <td id="transition metals">Ru</td>
+                    <td id="transition metals">Rh</td>
+                    <td id="transition metals">Pd</td>
+                    <td id="transition metals">Ag</td>
+                    <td id="transition metals">Cd</td>
+                    <td id="post transition">In</td>
+                    <td id="post transition">Sn</td>
+                    <td id="metalloids">Sb</td>
+                    <td id="metalloids">Te</td>
+                    <td id="halogens">I</td>
+                    <td id="noble gases">Xe</td>
+                </tr>
+                <!--row6-->
+                <tr>
+                    <td id="alkalai metals">Cs</td>
+                    <td id="alkalai earth metals">Ba</td>
+                    <td id="space"></td>
+                    <td id="transition metals">Hf</td>
+                    <td id="transition metals">Ta</td>
+                    <td id="transition metals">W</td>
+                    <td id="transition metals">Re</td>
+                    <td id="transition metals">Os</td>
+                    <td id="transition metals">Ir</td>
+                    <td id="transition metals">Pt</td>
+                    <td id="transition metals">Au</td>
+                    <td id="transition metals">Hg</td>
+                    <td id="post transition">Tl</td>
+                    <td id="post transition">Pb</td>
+                    <td id="post transition">Bi</td>
+                    <td id="metalloids">Po</td>
+                    <td id="halogens">At</td>
+                    <td id="noble gases">Rn</td>
+                </tr>
+                <!--row7-->
+                <tr>
                 </tr>
             </table>
     </body>
