--- a/d00/ex01/mendeleiev.html
+++ b/d00/ex01/mendeleiev.html
@@ -138,6 +138,31 @@
                 </tr>
                 <!--row7-->
                 <tr>
+                        <td id="alkalai metals">Fr</td>
+                        <td id="alkalai earth metals">Ra</td>
+                        <td id="transition metals">Lu</td>
+                        <td id="transition metals">Rf</td>
+                        <td id="transition metals">Db</td>
+                        <td id="transition metals">Sg</td>
+                        <td id="transition metals">Bh</td>
+                        <td id="transition metals">Hs</td>
+                        <td id="transition metals">Mt</td>
+                        <td id="transition metals">Ds</td>
+                        <td id="transition metals">Rg</td>
+                        <td id="transition metals">Cn</td>
+                        <td id="unknown elements">Uut</td>
+                        <td id="unknown elements">Fl</td>
+                        <td id="unknown elements">Uup</td>
+                        <td id="unknown elements">Lv</td>
+                        <td id="unknown elements">Uus</td>
+                        <td id="unknown elements">Uuo</td>
+                        
+                </tr>
+                <tr>
+                    <td id="space"></td>
+                </tr>
+                <tr>
+                    <td id="unknown elements">Pb</td>
                 </tr>
             </table>
     </body>
