--- a/d00/ex01/mendeleiev.html
+++ b/d00/ex01/mendeleiev.html
@@ -2,7 +2,7 @@
     <header>
         <title>The Periodic Table1</title>
         <style media="screen">
-            html, body, div, span, applet, object, iframe,
+           html, body, div, span, applet, object, iframe,
         h1, h2, h3, h4, h5, h6, p, blockquote, pre,
         a, abbr, acronym, address, big, cite, code,
         del, dfn, em, img, ins, kbd, q, s, samp,
@@ -53,7 +53,7 @@
                 text-align: center;
                 font-size: 5.5vh;
                 }
-            .color1{
+            .nocolor1{
                 transition: background-color 1s ease;
                 -o-transition: background-color 1s ease;
                 -moz-transition: background-color 1s ease;
@@ -154,7 +154,6 @@
                 <div class="color1"></div>
                 <div class="color1"></div>
                 <div class="color1"></div>
-                <!--blank2-->
             <!--Row 1-->
                 <div class="color1"></div>
                 <div class="color0"><h6>1.00794</h6><h1>H</h1><h5>1</h5></div>
@@ -410,26 +409,6 @@
       <div class="color1"></div>
       <div class="color1"></div>
       <!--  Blank 6 -->
-      <div class="color1"></div>
-      <div class="color1"></div>
-      <div class="color1"></div>
-      <div class="color1"></div>
-      <div class="color1"></div>
-      <div class="color1"></div>
-      <div class="color1"></div>
-      <div class="color1"></div>
-      <div class="color1"></div>
-      <div class="color1"></div>
-      <div class="color1"></div>
-      <div class="color1"></div>
-      <div class="color1"></div>
-      <div class="color1"></div>
-      <div class="color1"></div>
-      <div class="color1"></div>
-      <div class="color1"></div>
-      <div class="color1"></div>
-      <div class="color1"></div>
-      <div class="color1"></div>
     </main>
     </body>
 </HTML>
