--- a/d00/ex01/mendeleiev.html
+++ b/d00/ex01/mendeleiev.html
@@ -1,7 +1,8 @@
-<HTML>
-    <header>
-        <title>The Periodic Table1</title>
-        <style media="screen">
+<!DOCTYPE html>
+<html>
+  <header>
+    <title>The Periodic Table1</title>
+    <style media="screen">
            html, body, div, span, applet, object, iframe,
         h1, h2, h3, h4, h5, h6, p, blockquote, pre,
         a, abbr, acronym, address, big, cite, code,
@@ -29,7 +30,6 @@
             }
             div{
                 border: .5px solid #00000005;
-                text-align: center;
             }
             .table{
                 display: grid;
@@ -53,7 +53,7 @@
                 text-align: center;
                 font-size: 5.5vh;
                 }
-            .nocolor1{
+            .color1{
                 transition: background-color 1s ease;
                 -o-transition: background-color 1s ease;
                 -moz-transition: background-color 1s ease;
@@ -112,48 +112,48 @@
           transition: background-color 1s ease;
           -o-transition: background-color 1s ease;
           -moz-transition: background-color 1s ease;
-          background-color: #5F7367ae;
+          background-color: rgba(132, 18, 160, 0.682);
         }
         .color9:hover { background-color: #5F7367;}
         .color10 {
           transition: background-color 1s ease;
           -o-transition: background-color 1s ease;
           -moz-transition: background-color 1s ease;
-          background-color: #3A3042ae;
+          background-color: rgba(105, 15, 179, 0.682);
         }
         .color10:hover { background-color: #3A3042;}
         .color11 {
           transition: background-color 1s ease;
           -o-transition: background-color 1s ease;
           -moz-transition: background-color 1s ease;
-          background-color: #EF6461ae;}
+          background-color: rgba(14, 236, 99, 0.682);}
         .color11:hover { background-color: #EF6461;}
         }
         </style>
     </header>
     <body>
         <main class="table" contenteditable="true">
-                <div class="color1"></div>
-                <div class="color1"></div>
-                <div class="color1"></div>
-                <div class="color1"></div>
-                <div class="color1"></div>
-                <div class="color1"></div>
-                <div class="color1"></div>
-                <div class="color1"></div>
-                <div class="color1"></div>
-                <div class="color1"></div>
-                <div class="color1"></div>
-                <div class="color1"></div>
-                <div class="color1"></div>
-                <div class="color1"></div>
-                <div class="color1"></div>
-                <div class="color1"></div>
-                <div class="color1"></div>
-                <div class="color1"></div>
-                <div class="color1"></div>
-                <div class="color1"></div>
-                <div class="color1"></div>
+            <div class="color1"></div>
+            <div class="color1"></div>
+            <div class="color1"></div>
+            <div class="color1"></div>
+            <div class="color1"></div>
+            <div class="color1"></div>
+            <div class="color1"></div>
+            <div class="color1"></div>
+            <div class="color1"></div>
+            <div class="color1"></div>
+            <div class="color1"></div>
+            <div class="color1"></div>
+            <div class="color1"></div>
+            <div class="color1"></div>
+            <div class="color1"></div>
+            <div class="color1"></div>
+            <div class="color1"></div>
+            <div class="color1"></div>
+            <div class="color1"></div>
+            <div class="color1"></div>
+            <div class="color1"></div>
             <!--Row 1-->
                 <div class="color1"></div>
                 <div class="color0"><h6>1.00794</h6><h1>H</h1><h5>1</h5></div>
@@ -409,6 +409,27 @@
       <div class="color1"></div>
       <div class="color1"></div>
       <!--  Blank 6 -->
+      <div class="color1"></div>
+                <div class="color1"></div>
+                <div class="color1"></div>
+                <div class="color1"></div>
+                <div class="color1"></div>
+                <div class="color1"></div>
+                <div class="color1"></div>
+                <div class="color1"></div>
+                <div class="color1"></div>
+                <div class="color1"></div>
+                <div class="color1"></div>
+                <div class="color1"></div>
+                <div class="color1"></div>
+                <div class="color1"></div>
+                <div class="color1"></div>
+                <div class="color1"></div>
+                <div class="color1"></div>
+                <div class="color1"></div>
+                <div class="color1"></div>
+                <div class="color1"></div>
+                <div class="color1"></div>
     </main>
     </body>
-</HTML>
+</html>
