--- a/d00/ex01/redo.html
+++ b/d00/ex01/redo.html
@@ -2,16 +2,10 @@
     <header>
         <title>The Periodic Table</title>
         <style media="screen">
-            html, body, div, span,
-            h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-            a, abbr, acronym, address, big, cite, code,
-            del, dfn, em, img, ins, kbd, q, s, samp,
-            small, strike, strong, sub, sup, tt, var,
-            b, u, i, center, ol, ul, li,
-            fieldset, form, label, legend,
-            table, caption, tbody, tfoot, thead,
-            article, aside, canvas, details, embed,
-            figure, figcaption, footer, header, hgroup,
+            html, body, div,
+            h1, h4, h5, h6,big,img,
+            small, strong,var, center,
+            table,header,
             menu, output{
                 margin: 0;
                 padding: 0;
@@ -99,7 +93,7 @@
                 transition: background-color 1s ease;
                 -o-transition: background-color 1s ease;
                 -moz-transition: background-color 1s ease;
-                background-color: #D9D7DDae;
+                background-color: rgba(41, 16, 133, 0.682);
             }
             .halogens7:hover { background-color: #D9D7DD;}
             .lanthanides8{
