--- a/d00/ex01/redo.html
+++ b/d00/ex01/redo.html
@@ -60,35 +60,35 @@
                 -moz-transition: background-color 1s ease;
                 background-color: #3367C2a0;
             }
-            .Ametal2:hover { background-color: #3367C2;}
+            .Ametal2:hover { background-color: #D9D7DD;}
             .AEmetal3{
                 transition: background-color 1s ease;
                 -o-transition: background-color 1s ease;
                 -moz-transition: background-color 1s ease;
                 background-color: #98699Dae;
             }
-            .AEmetal3:hover { background-color: #98699D;}
+            .AEmetal3:hover { background-color: #D9D7DD;}
             .transmetal4{
                 transition: background-color 1s ease;
                 -o-transition: background-color 1s ease;
                 -moz-transition: background-color 1s ease;
                 background-color: #E24B56ae;
             }
-            .transmetal4:hover { background-color: #E24B56;}
+            .transmetal4:hover { background-color: #D9D7DD}
             .PTmetal5{
                 transition: background-color 1s ease;
                 -o-transition: background-color 1s ease;
                 -moz-transition: background-color 1s ease;
                 background-color: #E27454ae;
             }
-            .PTmetal5:hover { background-color: #E27454;}
+            .PTmetal5:hover { background-color: #D9D7DD;}
             .metalloids6{
                 transition: background-color 1s ease;
                 -o-transition: background-color 1s ease;
                 -moz-transition: background-color 1s ease;
                 background-color: #ECB868ae;
             }
-            .metalloids6:hover { background-color: #ECB868;}
+            .metalloids6:hover { background-color: #D9D7DD;}
             .halogens7{
                 transition: background-color 1s ease;
                 -o-transition: background-color 1s ease;
@@ -102,27 +102,27 @@
                 -moz-transition: background-color 1s ease;
                 background-color: #B07BACae;
             }
-            .lanthanides8:hover { background-color: #B07BAC;}
+            .lanthanides8:hover { background-color: #D9D7DD;}
             .actinides9{
                 transition: background-color 1s ease;
                 -o-transition: background-color 1s ease;
                 -moz-transition: background-color 1s ease;
                 background-color: rgba(132, 18, 160, 0.682);
             }
-            .actinides9:hover { background-color: #5F7367;}
+            .actinides9:hover { background-color: #D9D7DD;}
             .noblegas10{
                 transition: background-color 1s ease;
                 -o-transition: background-color 1s ease;
                 -moz-transition: background-color 1s ease;
                 background-color: rgba(105, 15, 179, 0.682);
             }
-            .noblegas10:hover { background-color: #3A3042;}
+            .noblegas10:hover { background-color: #D9D7DD;}
             .nonmetal11{
                 transition: background-color 1s ease;
                 -o-transition: background-color 1s ease;
                 -moz-transition: background-color 1s ease;
                 background-color: rgba(14, 236, 99, 0.682);}
-                .nonmetal11:hover { background-color: #EF6461;}
+                .nonmetal11:hover { background-color: #D9D7DD;}
             }
         </style>
     </header>
