--- a/d00/ex01/redo.html
+++ b/d00/ex01/redo.html
@@ -5,7 +5,7 @@
             html, body, div,
             h1, h4, h5, h6,big,img,
             small, strong,var, center,
-            table,header,
+            table,header, em,
             menu, output{
                 margin: 0;
                 padding: 0;
@@ -45,7 +45,11 @@
                 font-size: 5.5vh;
                 }
             h1{
-
+                color: #ffffffae;
+                margin: .35em 0 .35em 0;
+                font-size: 2vh;
+                font-weight: bold;
+                text-align: center;
             }
             .nocolor1{
                 transition: background-color 1s ease;
