--- a/d00/ex01/mendeleiev.html
+++ b/d00/ex01/mendeleiev.html
@@ -78,7 +78,7 @@
           transition: background-color 1s ease;
           -o-transition: background-color 1s ease;
           -moz-transition: background-color 1s ease;
-          background-color: #E24B56ae;
+          background-color: #b3ffff;
         }
         .color4:hover { background-color: #E24B56;}
         .color5 {
