--- a/d00/ex01/redo.html
+++ b/d00/ex01/redo.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <header>
         <title>The Periodic Table</title>
@@ -69,14 +70,14 @@
                 transition: background-color 1s ease;
                 -o-transition: background-color 1s ease;
                 -moz-transition: background-color 1s ease;
-                background-color: #98699Dae;
+                background-color: #24e0e0ae;);
             }
             .AEmetal3:hover { background-color: #D9D7DD;}
             .transmetal4{
                 transition: background-color 1s ease;
                 -o-transition: background-color 1s ease;
                 -moz-transition: background-color 1s ease;
-                background-color: #E24B56ae;
+                background-color:#E24B56ae;;
             }
             .transmetal4:hover { background-color: #D9D7DD}
             .PTmetal5{
