--- a/d00/ex02/doft.html
+++ b/d00/ex02/doft.html
@@ -1,34 +1,49 @@
 <!DOCTYPE html>
 <html>
     <head>
+            <meta charset="utf-8">
         <title>Day of the 42</title>
+        <link rel="stylesheet" type="text/css" href="doft.css">
     </head>
     <body>
-        <header>
-            <div class="d42"><img src= "resources/day_of_the_42.png">
-            <img src="resources/loupe.png">
-            <a href="https://www.disney.com/">
-                <img src="resources/reload.png" alt="Start from the beginning" title="Start from the beginning" >
+        <main class="grid">
+            <header>
+                <img class="d42logo" src="resources/day_of_the_42.png" alt="d42" title="d42logo">
+                <img class="search" src="resources/loupe.png" alt="search" title="search">
+                <a href="https://www.disney.com/">
+                    <img class="reload" src="resources/reload.png" alt="Start from the beginning" title="Start from the beginning" >
                 </a>
-            <a href="https://www.relaischateaux.com/">
-                <img src="resources/close.gif" alt="Disconnect" title="“Disconnect">
-            </a>
-            </div>
-        </header>
-        <div>
-            <img src="resources/arrow.png" alt="Advance" title="Advance">
-            <img src="resources/main.png" alt="Take" title="Take">
-            <img src="resources/oeil.png" alt="Look" title="Look">
-            <img src="resources/outil.png" alt="Use" title="Use">
-            <img src="resources/chat-icon.png" alt="Speak" title="Speak">
+                <a href="https://www.relaischateaux.com/">
+                    <img class="close" src="resources/close.gif" alt="Disconnect" title="“Disconnect">
+                </a>
+            </header>
+            <div class="leftborder">
+                <img src="resources/arrow.png" alt="Advance" title="Advance">
+                <img src="resources/main.png" alt="Take" title="Take">
+                <img class="selected" src="resources/oeil.png" alt="Look" title="Look">
+                <img src="resources/outil.png" alt="Use" title="Use">
+                <img src="resources/chat-icon.png" alt="Speak" title="Speak">
          </div>
-         <div>
-             <img src="resources/cluster.jpg" alt="" title=""> <!--add both links and clusters-->
+         <div class="centermain">
+             <img src="resources/cluster.jpg" alt="centermain" title="centermain" usemap="#map"/>
+             <map name="map" id="map">
+                <area alt="mac" title="Mac" href="http://www.apple.com" shape="poly" cords=""/>
+                <area alt="chair" title="Chair" href="http://www.ikea.com" shape="poly" cord=""/>
+             </map>
          </div>
-         <div>
+         <div class="rightborder">
              <img src="resources/book.png" alt="" title="">
              <img src="resources/towel.png" alt="" title="">
              <img src="resources/brick.jpg" alt="" title="">
          </div>
+         <div class="form">
+                Vous <span class="big">entrez</span> alors dans une grande piece remplie<br>d'<span class="shadow">ordinateurs</span>...<br>
+                <span class="italic">- Bonjour, vous êtes nouveau ici ?</span>
+                <form action="#">
+                    <input type="text">
+                    <input type="submit" value="Repondre">
+                </form>
+            </div>
+        </main>
     </body>
 </html>
