--- a/d00/ex02/doft.html
+++ b/d00/ex02/doft.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-            <meta charset="utf-8">
         <title>Day of the 42</title>
         <link rel="stylesheet" type="text/css" href="doft.css">
     </head>
     <body>
-        <main class="grid">
+        <div class="grid">
             <header>
                 <img class="d42logo" src="resources/day_of_the_42.png" alt="d42" title="d42logo">
                 <img class="search" src="resources/loupe.png" alt="search" title="search">
@@ -27,23 +26,23 @@
          <div class="centermain">
              <img src="resources/cluster.jpg" alt="centermain" title="centermain" usemap="#map"/>
              <map name="map" id="map">
-                <area alt="mac" title="Mac" href="http://www.apple.com" shape="poly" cords=""/>
-                <area alt="chair" title="Chair" href="http://www.ikea.com" shape="poly" cord=""/>
-             </map>
+                    <area alt="Mac" title="Mac" href="http://www.apple.com" shape="poly" coords="793,424,790,317,797,312,973,328,977,338,975,455,969,463,903,445,901,458,913,463,906,480,843,466,845,448,848,449,853,433" />
+                    <area alt="Chair" title="Chair" href="http://www.ikea.com" shape="poly" coords="407,393,436,382,449,387,449,393,423,403,439,411,456,416,429,427,431,438,438,444,436,453,425,448,413,456,403,457,396,452,398,478,406,469,414,475,412,480,461,488,466,500,456,501,456,490,400,486,427,527,430,541,419,542,419,528,397,500,399,512,391,512,389,492,341,529,345,536,340,540,337,541,331,536,338,522,382,483,345,492,345,501,332,500,339,484,389,474,390,458,380,450,352,441,342,435,344,392,344,376,325,332,329,323,360,328,390,339,403,358,403,391" />
+                </map>
+             <div class="form">
+                    Vous <span class="big">entrez</span> alors dans une grande piece remplie<br>d'<span class="shadow">ordinateurs</span>...<br>
+                    <span class="italic">- Bonjour, vous êtes nouveau ici ?</span>
+                    <form action="#">
+                        <input type="text">
+                        <input type="submit" value="Repondre">
+                    </form>
+                </div>
          </div>
          <div class="rightborder">
-             <img src="resources/book.png" alt="" title="">
-             <img src="resources/towel.png" alt="" title="">
-             <img src="resources/brick.jpg" alt="" title="">
+             <img src="resources/book.png" alt="book" title="book">
+             <img src="resources/towel.png" alt="towel" title="towel">
+             <div class="wall" title="Wall"></div>
          </div>
-         <div class="form">
-                Vous <span class="big">entrez</span> alors dans une grande piece remplie<br>d'<span class="shadow">ordinateurs</span>...<br>
-                <span class="italic">- Bonjour, vous êtes nouveau ici ?</span>
-                <form action="#">
-                    <input type="text">
-                    <input type="submit" value="Repondre">
-                </form>
-            </div>
-        </main>
+        </div>
     </body>
 </html>
